# Bud-Flow-Lang

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  LICENSE  README.md  TOOLS_AND_DEPENDENCIES.md  flow_lang_jit_arch.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
benchmarks/: arena_bench.cc  bench_main.cc  jit_compile_bench.cc  simd_ops_bench.cc
benchmarks/python/: auto_scheduler_bench.py  optimizations_bench.py  quick_bench.py  run_benchmarks.py
docs/: getting_started.md  index.md  installation.md  jit_optimization_research.md  performance_guide.md  python_api.md
docs/api/: core.md  creation.md  operations.md
docs/architecture/: dsl_specification.md  highway_functions.md  highway_gap_analysis.md  highway_integration.md
docs/development/: audit_report.md  gap_analysis.md  sota_jit_optimizations.md
docs/notebooks/: 01_introduction.ipynb  02_numpy_comparison.ipynb
docs/tutorials/: 01_first_program.md  02_basic_operations.md  03_memory_optimization.md  04_numpy_interop.md  05_performance.md
examples/: README.md  auto_vectorize.cc  basic_operations.py  basic_usage.cc  benchmark_suite.py  hello_flow.py  jit_compiled_kernels.py  kernel_tracing.py  machine_learning.py  numpy_comparison.py  pure_simd_kernels.py  simd_kernels.py  simd_kernels_comprehensive.py  test_kernel_debug.py  vector_operations.py
fuzz/: fuzz_ir_parser.cc  fuzz_type_inference.cc
include/bud_flow_lang/: arena.h  bud_flow_lang.h  bunch.h  common.h  error.h  ir.h  memory_hints.h  pattern.h  pipeline.h  stream.h  type_system.h
include/bud_flow_lang/codegen/: fused_kernel.h  hwy_ops.h
include/bud_flow_lang/highway/: highway_types.h
include/bud_flow_lang/ir/: fusion_cost_model.h  horizontal_fusion.h  sibling_fusion.h
include/bud_flow_lang/jit/: adaptive_executor.h  adaptive_kernel_cache.h  code_layout.h  persistent_cache.h  pgo_specializer.h  stencil.h
include/bud_flow_lang/memory/: adaptive_prefetch.h  cache_config.h  numa_allocator.h  prefetch.h  tiled_executor.h
include/bud_flow_lang/scheduler/: auto_scheduler.h  compute_dag.h  continuous_tuner.h  cost_model.h  evolutionary_search.h  schedule.h  search_space.h
python/flow/: __init__.py
python/flow/highway/: __init__.py
scripts/: quality-gate.sh
src/codegen/: fused_kernel.cc  hwy_ops-inl.h  hwy_ops.cc
src/core/: arena.cc  error.cc  hardware_detect.cc  type_system.cc
src/highway/: highway_types-inl.h  highway_types.cc
src/ir/: fusion_cost_model.cc  horizontal_fusion.cc  ir_builder.cc  ir_interpreter.cc  ir_node.cc  lazy_evaluator.cc  optimizer.cc  sibling_fusion.cc
src/jit/: adaptive_executor.cc  adaptive_kernel_cache.cc  code_cache.cc  code_layout.cc  copy_patch_compiler.cc  persistent_cache.cc  pgo_specializer.cc  stencil_registry.cc
src/memory/: adaptive_prefetch.cc  cache_config.cc  numa_allocator.cc  prefetch.cc  tiled_executor.cc
src/pattern/: pattern.cc
src/pipeline/: pipeline.cc
src/python/: bunch_bindings.cc  continuous_tuner_bindings.cc  flow_bindings.cc  highway_bindings.cc  hint_bindings.cc  memory_bindings.cc  module.cc  pattern_bindings.cc  pipeline_bindings.cc  stream_bindings.cc  tracing_context.cc  tracing_context.h
src/runtime/: bunch.cc  executor.cc  memory_pool.cc
src/scheduler/: auto_scheduler.cc  compute_dag.cc  continuous_tuner.cc  cost_model.cc  evolutionary_search.cc  schedule.cc  search_space.cc
src/stream/: stream.cc
tests/: test_main.cc
tests/codegen/: dynamic_threshold_test.cc  hwy_ops_test.cc  kernel_fusion_test.cc  optimized_reductions_test.cc  prefetch_test.cc  size_specialized_kernels_test.cc
tests/core/: arena_test.cc  type_system_test.cc
tests/integration/: e2e_test.cc  test_simple.cc
tests/ir/: fusion_cost_model_test.cc  horizontal_fusion_test.cc  ir_builder_test.cc  optimizer_test.cc  sibling_fusion_test.cc
tests/jit/: adaptive_executor_test.cc  code_layout_test.cc  copy_patch_test.cc  persistent_cache_test.cc  pgo_specializer_test.cc
tests/limits/: test_limits.cc
tests/memory/: adaptive_prefetch_test.cc
tests/python/: bench_adaptive_jit.py  bench_async_concurrent.py  bench_async_tuner.py  conftest.py  test_bindings.py  test_bud_flow_simple.py  test_continuous_tuner.py  test_full_system.py  test_jit_autotuning.py  test_stream.py  test_system_basic.py
tests/runtime/: bunch_test.cc
tests/scheduler/: auto_scheduler_benchmark_test.cc  auto_scheduler_integration_test.cc  auto_scheduler_stress_test.cc  auto_scheduler_test.cc  compute_dag_test.cc  cost_model_test.cc  evolutionary_search_test.cc  schedule_test.cc  search_space_test.cc
tests/stress/: test_stress.cc
tests/unit/: test_memory_optimization.cc
